--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,78 @@
-* {
+body {
 
     background-color: rgb(230, 220, 200);
     font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 
 }
 
-#game__title {
+.container{
+
+    width: 280px;
+    height: 625px;
+    padding: 15%;
+
+}
+
+.heading {
+
+
+}
+
+.title {
 
     color: rgb(62, 62, 62);
+
+}
+
+.scores-container {
+
+
+}
+
+.score-c {
+
+
+}
+
+.best-c {
+
+
+}
+
+.flex-container{
+
+    margin: 30px;
+    padding: 20px;
+    display: flex;
+}
+
+.button {
+
+    border: 1px solid rgb(115, 104, 104);
+    background-color: rgb(137, 119, 119);
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    width: 80px;
+    height: 60px;
+    line-height: 0px;
+    text-align: center;
     margin: 5px;
-    padding: 5%;
 }
 
 .radiobuttons {
 
     margin: 5px;
     padding: 5%;
+
+}
+
+.tetris_num {
+
+    text-align: center;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    margin: 2px;
 
 }
