--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,36 @@ body {
     padding: 5px;
     margin: 2px;
 }
+
+.tablero{
+
+    background-color: whitesmoke;
+
+    width: 200px;
+    height: 300px;
+    padding: 10%;
+    
+    display: flex;
+    flex-flow: column;
+}
+
+.container-casillas{
+
+    display: flex;
+    flex-flow: row;
+
+}
+
+.casilla{
+
+    border: 1px solid rgb(78 75 75);
+    background-color: rgb(137, 119, 119);
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    margin: 0px;
+
+}
